--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 .top-bar {
     background: #fff;
     padding: 10px 0;
+    box-shadow: 1px 3px 5px 0px rgb(0 104 52);
+    position: relative;
+    z-index: 9;
 }
 
 .container-fluid.cf {
@@ -752,4 +755,22 @@ left: 42%;
     }
 }
 
-  
+.thank-bg {
+    height:auto;
+    text-align:center;
+    width:80%;
+    margin:0 auto;
+    left:0;
+    right:0;
+    padding:10px;
+    margin-top: 30px;
+}
+.thank_you_page{
+    margin-top: 50px;
+}
+.thank_you_para{
+    font-size: 18px;
+}
+.br_thankou{
+    display: none;
+}
